added link and blog description

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>The search for Soul Food in Campus Dining</h2>
+          <p>Are you a college student? Do you eat food on campus? Do you enjoy it? Read my blog post about campus food!</p>
+          <a href="https://medium.com/@thomask88/the-search-for-soul-food-in-campus-dining-61cd5e2543f9" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
