--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Draw My Life</h2>
+          <p>Come with me through time as I draw my life.</p>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
+          <h2>The Effect of Artificial Intelligence on Education</h2>
+          <p>Did you like the video I linked? Did you even watch it?
+             We have a discussion about the effects of an effective learning 
+             cheat code, and how we think the landscape for AI usage will change.
+          </p>
           <a href="#" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
