--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+      <img src="images/cake.jpg" alt="Photo of a small cake. by Thomas Karen">
     </div>
     <div class="intro">
       I'm <span class="name"><strong>Thomas Karen</strong></span>, a junior year Comp-Sci student at Virginia Tech. I am driven to make change and always excited to take the next step.
