final touches for website

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Draw My Life</h2>
-          <p>Come with me through time as I draw my life.</p>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="external-link" target="_blank">Watch</a>
+          <h2>Leg Rehab Routine</h2>
+          <p>After a 4-year long high school sports career, I have had more than my fair share of injuries. Join me for a simple rehabilitative leg workout.</p>
+          <a href="https://www.youtube.com/watch?v=H95b0Gf8l7w" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
@@ -65,8 +65,13 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://docs.google.com/document/d/1K83PBqjaeTUg4tQuBOiUKKylb13JrUono3-jpBwNh-4/edit?usp=sharing" class="button" target="_blank">Resume</a>
     </div>
+
+    <div class="links-container">
+      <a href="https://www.linkedin.com/in/thomas-karen-4l/" class="button" target="_blank">LinkedIn</a>
+    </div>
+    
 
   </div>
   <div class="footer">
